plugins {
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id "com.gorylenko.gradle-git-properties" version "2.3.2"
    id "checkstyle"
    id 'java'
    id 'jacoco'
    id "io.freefair.lombok" version "8.14.3"
    id "com.github.node-gradle.node" version "7.1.0"
    id 'org.jetbrains.kotlin.jvm'
    id 'net.ltgt.errorprone'
}

apply from: rootProject.file('gradle/nullmarked-packages.gradle')

group = "run.ikaros.server"

checkstyle {
    toolVersion = "9.3"
    showViolations = false
    ignoreFailures = false
    configFile = rootProject.file("config/checkstyle/checkstyle.xml")
}

repositories {
    mavenCentral()

    maven { url = 'https://repo.spring.io/milestone' }
    mavenLocal()
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

springBoot {
    buildInfo()
}

def mainResourcesDirectory = layout.buildDirectory.dir('resources/main')

bootJar {
    dependsOn 'buildFrontend'
    manifest {
        attributes "Implementation-Title": "Ikaros Application",
                "Implementation-Version": archiveVersion
    }
    archiveFileName = "ikaros-server.jar"
    doFirst {
        def requiredResources = [
                'templates/simple/index.html',
                'console/index.html'
        ]
        requiredResources.each { resourcePath ->
            def resourceFile = project.layout.buildDirectory
                    .file("resources/main/${resourcePath}").get().asFile
            if (!resourceFile.isFile()) {
                throw new GradleException("缺少 JAR 必需资源: ${resourcePath}")
            }
        }
    }
}

tasks.named('jar') {
    enabled = false
}

ext {
    commonsLang3 = "3.12.0"
    pf4j = '3.9.0'
    jsoup = '1.15.3'
}

dependencies {
    errorprone 'com.google.errorprone:error_prone_core:2.36.0'
    errorprone 'com.uber.nullaway:nullaway:0.12.7'
    implementation project(':api')
    implementation 'org.mp4parser:isoparser:1.9.41'

    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    annotationProcessor "org.springframework:spring-context-indexer"

    // 针对插件RestTemplate的支持
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
    implementation 'org.json:json:20230227'

    implementation "io.micrometer:micrometer-registry-prometheus"

    implementation "org.springframework.boot:spring-boot-starter-data-redis-reactive"

    implementation 'org.apache.commons:commons-csv:1.14.1'

    implementation 'name.nkonev.r2dbc-migrate:r2dbc-migrate-spring-boot-starter'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'org.testcontainers:testcontainers-r2dbc'
    testImplementation 'io.projectreactor:reactor-test'
}


node {
    version = '22.22.1'
    pnpmVersion = '10.32.1'
    download = true
    nodeProjectDir = file("${rootProject.projectDir}/console")
}

// pnpm 10.x 在无 TTY 环境(如 Gradle/CI)删除 modules 目录前需要确认，设置 CI=true 跳过
tasks.withType(PnpmTask).configureEach {
    environment = ['CI': 'true']
}

task pnpmInstallPackageShared(type: PnpmTask) {
    args = ['--filter', './packages/shared', 'install']
}

task buildFrontendPackageShared(type: PnpmTask) {
    args = ['--filter', './packages/shared', 'build']
    dependsOn("pnpmInstallPackageShared")
}

task pnpmInstallPackageApiClient(type: PnpmTask) {
    args = ['--filter', './packages/api-client', 'install', '--ignore-scripts=true']
}

task buildFrontendPackageApiClient(type: PnpmTask) {
    args = ['--filter', './packages/api-client', 'build']
    dependsOn("pnpmInstallPackageApiClient")
}

task pnpmInstallFrontend(type: PnpmTask) {
    args = ["install"]
    dependsOn("buildFrontendPackageShared", "buildFrontendPackageApiClient")
}

task buildFrontend(type: PnpmTask) {
    args = ['build']
    dependsOn("pnpmInstallFrontend")
    inputs.files(fileTree("${rootProject.projectDir}/console") {
        include 'src/**'
        include 'index.html'
        include 'vite.config.ts'
        include 'package.json'
        include 'pnpm-lock.yaml'
        include 'pnpm-workspace.yaml'
    })
    outputs.dir(file("${rootProject.projectDir}/server/src/main/resources/console"))
}

tasks.named('processResources') {
    mustRunAfter('buildFrontend')
}

tasks.named('processResources') {
    mustRunAfter('buildFrontend')
}

task pnpmDev(type: PnpmTask) {
    args = ["dev"]
    dependsOn("buildFrontend")
}

build {
    // build frontend before build
    // tasks.getByName('compileJava').dependsOn('buildFrontend')
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.errorprone {
        disableWarningsInGeneratedCode = true
        disableAllChecks = true
        check('NullAway', net.ltgt.gradle.errorprone.CheckSeverity.ERROR)
        option('NullAway:JSpecifyMode', 'true')
        option('NullAway:OnlyNullMarked', 'true')
    }
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.named('jacocoTestReport') {
    reports {
        xml.required = true
        html.required = true
    }
//    afterEvaluate {
//        classDirectories.setFrom(files(classDirectories.files.collect {
//            fileTree(dir: it, exclude: [
//                    "run/ikaros/core/IkarosApplication.class",
//                    "run/ikaros/core/infra/properties/*",
//                    "run/ikaros/core/store/entity/*",
//                    "run/ikaros/core/store/enums/*"
//            ])
//        }))
//    }
}
kotlin {
    jvmToolchain(21)
}
